--- a/map1.lfm
+++ b/map1.lfm
@@ -1,7 +1,7 @@
 object Form5: TForm5
-  Left = -42
-  Height = 1061
-  Top = 104
+  Left = 349
+  Height = 1080
+  Top = 196
   Width = 1920
   Caption = 'Form5'
   ClientHeight = 0
@@ -10,9 +10,9 @@ object Form5: TForm5
   LCLVersion = '3.6.0.0'
   WindowState = wsFullScreen
   object Image1: TImage
-    Left = -328
+    Left = 0
     Height = 1080
-    Top = -40
+    Top = 0
     Width = 1920
     Picture.Data = {
       1754506F727461626C654E6574776F726B477261706869635A23000089504E47
@@ -310,5 +310,20 @@ object Form5: TForm5
     Caption = 'Button1'
     TabOrder = 0
     OnClick = Button1Click
+  end
+  object Panel1: TPanel
+    Left = 695
+    Height = 306
+    Top = 236
+    Width = 522
+    Caption = 'Panel1'
+    TabOrder = 1
+  end
+  object Timer1: TTimer
+    Enabled = False
+    Interval = 1
+    OnTimer = Timer1Timer
+    Left = 306
+    Top = 231
   end
 end
