--- a/map1.lfm
+++ b/map1.lfm
@@ -1,11 +1,11 @@
 object Form5: TForm5
-  Left = -8
+  Left = 1903
   Height = 991
   Top = 0
   Width = 1902
   Caption = 'Form5'
-  ClientHeight = 0
-  ClientWidth = 0
+  ClientHeight = 991
+  ClientWidth = 1902
   OnCreate = FormCreate
   LCLVersion = '3.6.0.0'
   WindowState = wsFullScreen
@@ -982,6 +982,32 @@ object Form5: TForm5
       82
     }
     Stretch = True
+  end
+  object Image8: TImage
+    Left = 1416
+    Height = 32
+    Top = 16
+    Width = 32
+    Picture.Data = {
+      1754506F727461626C654E6574776F726B477261706869633001000089504E47
+      0D0A1A0A0000000D494844520000002000000020080300000044A48AC6000000
+      017352474200AECE1CE90000000467414D410000B18F0BFC610500000009504C
+      5445FDCF00FC9D050000003B4452670000000374524E53FFFF00D7CA0D410000
+      00097048597300000EC300000EC301C76FA864000000A149444154384FAD9241
+      128320100485FF3F3ACC6E530C2BA587D80710BA83C6E4EAC6052C83B540029B
+      2B60DF9882E90026C723A98A6F8D0B310396A225AC42BA47DB297B50A450C025
+      B72FC1D0FF078B63E0C4033E052AEAB728BC175F1C22F95884DB027F13831AF8
+      9B0CE4FC165B303F6C5E81FF184D723B600BA4029683086E058B01FF497F4ED7
+      E9347861A48AF15860723A145330D7844D0F0648DBEBFD075CF3021D191B3955
+      0000000049454E44AE426082
+    }
+  end
+  object Label6: TLabel
+    Left = 1360
+    Height = 15
+    Top = 24
+    Width = 24
+    Caption = '3000'
   end
   object Timer1: TTimer
     Enabled = False
