--- a/map1.lfm
+++ b/map1.lfm
@@ -1,7 +1,7 @@
 object Form5: TForm5
-  Left = -7
+  Left = 1943
   Height = 991
-  Top = 0
+  Top = 22
   Width = 1902
   Caption = 'Form5'
   ClientHeight = 0
@@ -14,6 +14,7 @@ object Form5: TForm5
     Height = 1080
     Top = 0
     Width = 1920
+    OnClick = Image1Click
     Picture.Data = {
       1754506F727461626C654E6574776F726B477261706869635A23000089504E47
       0D0A1A0A0000000D494844520000078000000438080200000067B15614000001
