--- a/map2.lfm
+++ b/map2.lfm
@@ -1,7 +1,7 @@
 object Form6: TForm6
-  Left = 649
+  Left = 260
   Height = 835
-  Top = 426
+  Top = 149
   Width = 1682
   Caption = 'Form6'
   ClientHeight = 835
@@ -14,9 +14,6 @@ object Form6: TForm6
     Height = 1011
     Top = 0
     Width = 1902
-    OnMouseDown = Image10MouseDown
-    OnMouseEnter = Image10MouseEnter
-    OnMouseLeave = Image10MouseLeave
   end
   object Image1: TImage
     Left = 0
@@ -38816,7 +38813,7 @@ object Form6: TForm6
     Left = 1176
     Height = 19
     Top = 920
-    Width = 65
+    Width = 64
     Caption = '2x Speed'
     TabOrder = 11
     OnChange = CheckBox1Change
@@ -39201,12 +39198,13 @@ object Form6: TForm6
   object Timer1: TTimer
     Interval = 15
     OnTimer = Timer1Timer
-    Left = 309
-    Top = 191
+    Left = 272
+    Top = 192
   end
   object Timer2: TTimer
+    Enabled = False
     OnTimer = Timer2Timer
-    Left = 543
-    Top = 690
+    Left = 320
+    Top = 192
   end
 end
