--- a/map2.lfm
+++ b/map2.lfm
@@ -1,11 +1,11 @@
 object Form6: TForm6
-  Left = 685
-  Height = 1112
-  Top = 146
-  Width = 1682
+  Left = 155
+  Height = 991
+  Top = 555
+  Width = 1902
   Caption = 'Form6'
-  ClientHeight = 1112
-  ClientWidth = 1682
+  ClientHeight = 991
+  ClientWidth = 1902
   OnCreate = FormCreate
   LCLVersion = '3.6.0.0'
   WindowState = wsFullScreen
@@ -20,6 +20,7 @@ object Form6: TForm6
     Height = 1017
     Top = 0
     Width = 1472
+    OnClick = Image1Click
     Picture.Data = {
       0A544A706567496D616765BD731200FFD8FFE000104A46494600010100000100
       010000FFE201D84943435F50524F46494C45000101000001C800000000043000
@@ -37820,14 +37821,14 @@ object Form6: TForm6
     Height = 1019
     Top = 0
     Width = 453
-    Brush.Color = 16755008
+    Brush.Color = 880019
     Pen.Color = clMenu
   end
   object Button1: TButton
-    Left = 1320
-    Height = 25
-    Top = 920
-    Width = 75
+    Left = 1584
+    Height = 49
+    Top = 896
+    Width = 83
     Caption = 'Start'
     TabOrder = 0
     OnClick = Button1Click
@@ -38144,7 +38145,7 @@ object Form6: TForm6
     Width = 265
     ClientHeight = 244
     ClientWidth = 261
-    Color = 16755008
+    Color = 880019
     ParentBackground = False
     ParentColor = False
     TabOrder = 1
@@ -38166,6 +38167,7 @@ object Form6: TForm6
       Width = 40
       Caption = 'X'
       TabOrder = 1
+      OnClick = Button2Click
     end
     object Panel6: TPanel
       Left = 16
@@ -38187,7 +38189,7 @@ object Form6: TForm6
     Width = 265
     ClientHeight = 244
     ClientWidth = 261
-    Color = 16755008
+    Color = 880019
     ParentBackground = False
     ParentColor = False
     TabOrder = 2
@@ -38209,6 +38211,7 @@ object Form6: TForm6
       Width = 40
       Caption = 'X'
       TabOrder = 1
+      OnClick = Button3Click
     end
     object Panel7: TPanel
       Left = 16
@@ -38230,7 +38233,7 @@ object Form6: TForm6
     Width = 265
     ClientHeight = 244
     ClientWidth = 261
-    Color = 16755008
+    Color = 880019
     ParentBackground = False
     ParentColor = False
     TabOrder = 3
@@ -38252,6 +38255,7 @@ object Form6: TForm6
       Width = 40
       Caption = 'X'
       TabOrder = 1
+      OnClick = Button4Click
     end
     object Panel8: TPanel
       Left = 16
@@ -38273,7 +38277,7 @@ object Form6: TForm6
     Width = 265
     ClientHeight = 244
     ClientWidth = 261
-    Color = 16755008
+    Color = 880019
     ParentBackground = False
     ParentColor = False
     TabOrder = 4
@@ -38295,6 +38299,7 @@ object Form6: TForm6
       Width = 40
       Caption = 'X'
       TabOrder = 1
+      OnClick = Button5Click
     end
     object Panel9: TPanel
       Left = 16
@@ -38316,7 +38321,7 @@ object Form6: TForm6
     Width = 265
     ClientHeight = 244
     ClientWidth = 261
-    Color = 16755008
+    Color = 880019
     ParentBackground = False
     ParentColor = False
     TabOrder = 5
@@ -38338,6 +38343,7 @@ object Form6: TForm6
       Width = 40
       Caption = 'X'
       TabOrder = 1
+      OnClick = Button6Click
     end
     object Panel10: TPanel
       Left = 16
@@ -38810,13 +38816,12 @@ object Form6: TForm6
     ParentFont = False
   end
   object CheckBox1: TCheckBox
-    Left = 1176
+    Left = 1592
     Height = 19
-    Top = 920
-    Width = 65
+    Top = 872
+    Width = 64
     Caption = '2x Speed'
     TabOrder = 11
-    OnChange = CheckBox1Change
   end
   object Label12: TLabel
     Left = 112
@@ -38899,9 +38904,9 @@ object Form6: TForm6
     OnClick = Button13Click
   end
   object Label13: TLabel
-    Left = 264
+    Left = 1688
     Height = 30
-    Top = 8
+    Top = 904
     Width = 83
     Caption = 'Welle ?/?'
     Font.Height = -21
@@ -38914,7 +38919,7 @@ object Form6: TForm6
     Width = 265
     ClientHeight = 612
     ClientWidth = 261
-    Color = 16755008
+    Color = 880019
     ParentBackground = False
     ParentColor = False
     TabOrder = 14
@@ -39108,7 +39113,7 @@ object Form6: TForm6
     object CheckBox2: TCheckBox
       Left = 51
       Height = 19
-      Top = 64
+      Top = 88
       Width = 67
       Caption = 'Autostart'
       Checked = True
@@ -39125,29 +39130,13 @@ object Form6: TForm6
       TabOrder = 4
       OnClick = Button18Click
     end
-    object TrackBar2: TTrackBar
-      Left = 51
-      Height = 24
-      Top = 134
-      Width = 133
-      Max = 100
-      Position = 100
-      TabOrder = 5
-    end
-    object Label15: TLabel
-      Left = 51
-      Height = 15
-      Top = 112
-      Width = 54
-      Caption = 'Lautstärke'
-    end
     object Button19: TButton
       Left = 414
       Height = 25
       Top = 96
       Width = 84
-      Caption = 'Pausieren'
-      TabOrder = 6
+      Caption = 'Stumm'
+      TabOrder = 5
       OnClick = Button19Click
     end
     object CheckBox3: TCheckBox
@@ -39156,7 +39145,7 @@ object Form6: TForm6
       Top = 134
       Width = 85
       Caption = 'Wiederholen'
-      TabOrder = 7
+      TabOrder = 6
       OnChange = CheckBox3Change
     end
     object ComboBox1: TComboBox
@@ -39165,7 +39154,16 @@ object Form6: TForm6
       Top = 64
       Width = 200
       ItemHeight = 15
-      TabOrder = 8
+      Items.Strings = (
+        'By the Firelight'
+        'Groovin Tropics'
+        'Flamenco Fire'
+        'Frostbound Strategy'
+        'Snowy Peaks'
+        'Glacial Glimpse'
+      )
+      ReadOnly = True
+      TabOrder = 7
       Text = 'Songname bbbbbbbbbbbb'
       OnChange = ComboBox1Change
     end
@@ -39176,7 +39174,7 @@ object Form6: TForm6
       Width = 170
       Caption = 'Einstellungen'
       ParentBackground = False
-      TabOrder = 9
+      TabOrder = 8
     end
   end
   object Panel17: TPanel
